# lay.run

./: .env.example  .envrc  .gitignore  .gitignore.bak  .pre-commit-config.yaml  README.md  devbox.json  process-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
backend/migrations/: 20241123000001_create_users_table.sql  20241123000002_create_verification_codes_table.sql  20241123000003_create_rate_limits_table.sql  20241123000004_update_rate_limits_for_identifiers.sql  20241123000005_remove_password_hash.sql  20241123000006_add_totp.sql  20241123000007_increase_code_length.sql  20241126000001_add_totp_pending_secret.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: user.rs  verification_code.rs
backend/src/routes/: auth.rs  health.rs  mod.rs
backend/src/services/: auth.rs  auth_test.rs  email.rs  mod.rs  rate_limit.rs  rate_limit_rules.rs
backend/src/utils/: retry.rs
cli/: Cargo.toml  README.md
cli/src/: cli.rs  client.rs  config.rs  error.rs  greeting.rs  input.rs  main.rs  token.rs  types.rs  ui.rs
cli/src/commands/: auth.rs  health.rs  mod.rs  user.rs
cli/src/storage/: session.rs
cli/src/types/: mod.rs  requests.rs  responses.rs
cli/src/ui/: display.rs  greeting.rs  mod.rs
