[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.7", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Environment & Configuration
dotenvy = "0.15.7"

# Logging & Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# UUID & Time
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ses = "1"

# Authentication
rusty_paseto = "0.7"
rand = "0.8"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
base32 = "0.5"

# User agent parsing
woothee = "0.13"

# IP geolocation
ipgeolocate = "0.3"

# Retry logic
tokio-retry = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
